# content

./: .ai-review-trigger  .coverage  .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .lgtm.yaml  .lgtm.yml  .markdownlint-cli2.jsonc  .markdownlint.json  .nvmrc  .pre-commit-config.yaml  .pre-commit-config_template.yaml  .pylintrc  .python-version  .report_mypy.xml  .report_pytest.xml  .secrets-ignore  .secrets_white_list.json  .sourcery.yaml  .step11_ids.txt  .step11_results.tsv  .step11_survey_results.tsv  .step11_survey_run.out  1_7ac642e4-fdc5-432d-8397-4510887c47d6  1_9f2b1d87-b8fa-4f2f-a976-b2b3048ef193  AGENTS.md  CODE_OF_CONDUCT.md  COMMAND_TEMPLATE.json  CONTRIBUTING.md  CarbonBlackEdr_Test.yml  Cisco_OpenDNS.yml  CommonServerPython.py  Containment_Plan_-_Block_Indicators.yml  Cortex_XDR_-_Identity_Analytics1.yml  DGE-XSOAR.code-workspace  DNSQuery.yml  Dockerfile  DownloadAndArchivePythonLibrary.yml  (+1689 more)
.ai/: README.md
.akamai_scratch/: CODEOWNERS
.circleci/: analyze_non_packs_files.sh  build-requirements.txt  circleci_spell_checker.py  comment_on_pr.py  config.yml  config_old.yml  content_release_vars.sh  git_pull_master_into_fork.sh  gitlab-ci-env-variables.sh  is_file_up_to_date.sh  linters_runner.sh  mypy.sh  spell_checker.py  update_contribution_pack_in_base_branch.py  validate.sh  validate_landing_page_sections.py
.claude/: settings.local.json
.devcontainer/: .p10k.zsh  .zshrc  Dockerfile  createCerts.sh  createCommand.sh  create_certs.sh  create_command.sh  demisto-sdk-version.txt  devcontainer.json  docker-compose.mutagen.yml  docker-compose.yml  onCreateCommand.sh  settings.json
.github/: CODEOWNERS  config.yml  content_roles.json  contribution_team.json  dependabot.yml  pull_request_template.md
.gitlab/: helper_functions.sh  split_test_dirs.sh
.guardrails/: ignore
.hooks/: .pre-commit.swp  bootstrap  install.python-poetry.py  parse-mdx-single.js  pre-commit  pre-push  ruff-version.bash  ruff-version.py  validate-mdx.js
.idex/: resolve_conflicts.py  sentinel-lookback-analysis.md
.tmp_migration/: run_step8_worker-10.sh  run_steps_8_10_worker-13.sh  steps_8_10_worker-02.sh  steps_8_10_worker-04.sh
.worktree-context/: handoff.md
2021-01-12_1633 Опрос (3)/: message.txt
AzureSentinelListCustomDetails/: AzureSentinelListCustomDetails.py  AzureSentinelListCustomDetails.yml
Beta_Integrations/: Blueliv_ThreatContext  integration-AWS-Athena.yml  integration-AnomaliThreatStream.yml  integration-Exabeam.yml  integration-Proofpoint_Server_Protection.yml  integration-Signal_Sciences_WAF.yml  integration-Symantec_Deepsight.yml  integration-Symantec_Deepsight_CHANGELOG.md  integration-ThreatQ.yml  integration-ThreatQ_CHANGELOG.md  integration-TrendMicroDDA.yml  integration-TrendMicroDDA_CHANGELOG.md  integration-Vertica.yml  integration-cisco-ise.yml  integration-proofpoint_threat_respons.yml  integration-proofpoint_threat_response.yml  integration-remedy_SR.yml  integrations-Awake_Security.yml  playbook-Remedy_SR_test.yml  playbook-SymantecBlueCoatMalwareAnalysis_DetonateFile.yml  playbook-SymantecBlueCoatMalwareAnalysis_DetonateURL.yml  playbook-SymantecBlueCoatMalwareAnalysis_DetonateURL_CHANGELOG.md  playbook-TrendMicroDDA_Test.yml  playbook-TrendMicro_DDA_DetonateFile.yml  playbook-TrendMicro_DDA_DetonateFile_CHANGELOG.md  playbook-TrendMicro_DDA_DetonateURL.yml  playbook-TrendMicro_DDA_DetonateURL_CHANGELOG.md  script-ArcherTestCredentials.yml
BluecatAddressManager/: BluecatAddressManager.py  BluecatAddressManager.yml  BluecatAddressManager_description.md
CiscoMeraki/: README.md  pack_metadata.json
Classifiers/: classifier-Aella_Star_Light.json  classifier-Crowdstrike-Streaming.json  classifier-Cyberint.json  classifier-EWS_v2.json  classifier-EWS_v2_CHANGELOG.md  classifier-Gsuite-gmail.json  classifier-Mail-listener.json  classifier-Mail-listener_CHANGELOG.md  classifier-MicrosoftGraphListener.json  classifier-MicrosoftGraphListener_CHANGELOG.md  classifier-OnboardingIntegration.json  classifier-PaloAltoNetworks_Cortex.json  classifier-PaloAltoNetworks_CortexXDR.json  classifier-PaloAltoNetworks_CortexXDR_CHANGELOG.md  classifier-PaloAltoNetworks_Cortex_CHANGELOG.md  classifier-Prisma_Cloud.json  classifier-Prisma_Cloud_CHANGELOG.md  classifier-QRadar.json  classifier-Sample.json  classifier-SophosCentral.json  classifier-SplunkPy.json  classifier-_Siem.json  classifier-default_API.json  classifier-gmail-single-user.json  classifier-gmail-single-user_CHANGELOG.md  classifier-mapper-incoming-CyberInt.json  classifier-mapper-incoming-CyberInt_(mapper).json  classifier-mapper-incoming-SophosCentral.json  classifier-mapper-outgoing-CyberInt.json  classifier-prismaCloud_app.json  classifier-prismaCloud_app_CHANGELOG.md
CommonScripts/: README.md  metadata.json
Config/: approved_categories.json  approved_tags.json  approved_usecases.json  compliant_policies.json  core_packs_list.json  core_packs_mpv2_list.json  core_packs_platform_list.json  core_packs_xpanse_list.json  corepacks_override.json  platform_policies.json
Connections/: canvas-context-connections.json
Cortex_Module_Test/: LICENSE  README.md  pyproject.toml
Cortex_Module_Test/cortex_module_test/: __init__.py  test_override_csp.py
Cyberint/: Cyberint.py  Cyberint.yml  Cyberint_test.py  Cyberint_unified.yml
Dashboards/: dashboard-Home-old.json  dashboard-Home.json  dashboard-Incidents.json  dashboard-Incidents2.json  dashboard-Incidents3.json  dashboard-SLA.json  dashboard-SystemHealth-old.json  dashboard-SystemHealth.json
Dataset_formatter_xsiem/: dataset_formatter_xsiem.py
Docs/: commonServerDocs.sh  common_server_docs.py  format_js_common_server.py
Documentation/: .gitignore  commonServerConstants.json  commonServerDocs.sh  common_server_docs.py  doc-howto.json  docs_site_update.sh  extract_common_server_js.py
GCP/: GCP.py  GCP.yml  GCP_test.py
HackatonTest/: HackatonTest.yml
IncidentFields/: incidenfield-actor.json  incidenfield-address.json  incidenfield-admincountry.json  incidenfield-adminemail.json  incidenfield-adminname.json  (+490 more)
(+111037 files in other folders)
