[tool.poetry]
name = "content"
version = "0.1.0"
description = "Cortex XSOAR content"
authors = ["Cortex XSOAR"]
license = "MIT"
package-mode = false

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.8,<3.11"

[tool.poetry.group.github-actions.dependencies]
packaging = "^24"
pytest = "^7.4.4"
requests = "^2.32.3"
urllib3 = "^2.2.2"
blessings = "^1.7"
PyGithub = "^1.59"
gitpython = "^3.1.43"
sendgrid = "^6.11"
slack_sdk = "^3.31.0"

[tool.poetry.group.dev.dependencies]
demisto-sdk = "1.31.9"
pytest = ">=7.1.2"
requests-mock = ">=1.9.3"
pytest-mock = ">=3.7.0"
freezegun = ">=1.1.0"
dateparser = ">=1.2.0"
ruff = "*"  # See `.pre-commit-config-template` for version used in pre-commit. Version here doesn't matter.

[tool.poetry.group.typing.dependencies]
types-tqdm = "^4.66.0.2"
types-requests = "2.28.11"
types-mock = "^4.0.15"
types-setuptools = "^69.2.0.20240317"
types-ujson = "^5.6.0.0"
types-decorator = "^5.1.8"
types-toml = "^0.10.8.7"
types-tabulate = "^0.9.0.20240106"
types-pytz = ">=2021.3.6,<2023.0.0"
types-dateparser = "^1.1.4.20240106"
types-python-dateutil = "^2.9.0.20240316"
types-protobuf = "^4.24.0.4"
types-six = "^1.16.21.20240513"
types-paramiko = "2.12.0"
types-PyMySQL = "1.1.0.20240425"
types-markdown = "3.6.0.20240316"
types-PyYAML = "6.0.12.20240311"
types-emoji = "2.1.0.3"

[tool.ruff]
select = [
    "UP015"
]
fix = true
ignore = [
    "E402", # module-import-not-at-top-of-file

    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage

    "W605", # invalid-escape-sequence
]
extend-exclude = ["CommonServerPython", "test_data", "conftest.py", "demistomock.py"]

unfixable = [
    "RUF001"  # ambiguous-unicode-character-string
]

line-length = 130
target-version = "py310"
src = [
    "Packs/Base/Scripts/CommonServerPython",
    "Tests/demistomock",
    "Packs/ApiModules/Scripts/*",
]

[tool.ruff.per-file-ignores]
"**/*_test.py" = []
# Ignore any Python update in ApiModules, until we can proprtly determine their desired version.
"**/*ApiModule.py"  = [ "UP" ]
[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
follow_imports = "silent"
pretty = true
allow_redefinition = true
exclude = [
    "test_data",
    "tests_data",
    ".venv",
    ".*_test.py$",
    "test_.*.py",
    "infrastructure_tests",
    "CommonServerPython.py",
    "demistomock.py",
]

[tool.autopep8]
max_line_length = 130

[tool.pytest]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true
omit = ["*/test_data/*", "*_test.py", "demistomock.py", "conftest.py", "**/conftest.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
