[tool.poetry]
name = "content"
version = "0.1.0"
description = "Cortex XSOAR content"
authors = ["Cortex XSOAR"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
defusedxml = "^0.7.1"
uuid = "^1.30"
datetime = "^5.2"

[tool.poetry.group.dev.dependencies]
demisto_sdk = "1.14.5"
requests = "^2.22.0"
pre-commit = "^2.20.0"

[tool.poetry.group.linters.dependencies]
mypy = "^0.982"
flake8 = "^4.0.1"
ruff = "^0.0.264"

[tool.poetry.group.testing.dependencies]
pytest = "^7.1.2"
requests-mock = "^1.9.3"
pytest-mock = "^3.7.0"
freezegun = "^1.1.0"
mock-open = "^1.4.0"

# If mypy requires for a `types-*` package, add it here with `poetry add --group typing <package>`
[tool.poetry.group.typing.dependencies]
types-python-dateutil = "^2.8.19.3"

# This is the python dependencies from the py3-native docker image.
# See https://github.com/demisto/dockerfiles/blob/master/docker/py3-native/pyproject.toml
[tool.poetry.group.native]
optional = true

[tool.poetry.group.native.dependencies]
opensearch_dsl = "*"
aiohttp = "*"
python-magic = "*"
pan-os-python = "*"
pdf2image = "*"
bs4 = "*"
lxml = "*"
chardet = "*"
six = "*"
pygments = "*"
numpy = "*"
scikit-learn = "*"
nltk = "*"
pandas = "*"
urllib3 = "*"
python-docx = "*"
enum34 = "*"
pypdf2 = "*"
pikepdf = "*"
boto3 = "*"
msal = "*"
cryptography = "*"
tzlocal = "*"
defusedxml = "*"
isodate = "*"
future = "*"
idna = "*"
pycparser = "*"
cffi = "*"
asn1crypto = "*"
certifi = "*"
cached-property = "*"
phrases-case = "*"
pyvirtualdisplay = "*"
parse-emails = "*"
slack-sdk = { extras = ["optional"], version = "*" }
pyjwt = { extras = ["crypto"], version = "*" }
google-api-python-client = "*"
exchangelib = "*"
requests-oauthlib = "*"
oauthlib = "*"
requests-ntlm = "*"
oauth2client = "*"
dill = "*"
eli5 = "*"
packaging = "*"
rtfde = "*"
webdriver-manager = "*"
selenium = "*"
cymruwhois = "*"
simplejson = "*"
networkx = "*"
slackclient = "*"
dpkt = "*"
aiodns = "*"
pysocks = "^1.7.0"                                   # must be 1.7.0 or above, cause 1.6.8 doesn't work on python 3.10
jbxapi = "*"
python-whois = "*"
ipwhois = "*"
edgegrid-python = "*"
tldextract = "*"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
blessings = "^1.7"
coloredlogs = "^15.0.1"
pandas = "^1.3.3"
prettytable = "^3.2.0"
pyspellchecker = "^0.6.2"
sendgrid = "^6.6.0"
slack_sdk = "^3.11.2"
timeout_decorator = "^0.5.0"
ujson = "^5.1.0"
yamlordereddictloader = "^0.4.0"
parinx = { git = "https://github.com/npsolve/parinx.git", rev = "6493798ceba8089345d970f71be4a896eb6b081d" }
python-gitlab = "^3.0.0"
PyGithub = "^1.54.1"
ansible-runner = "^2.2.0"
paramiko = "^2.11.0"
boto3 = "^1.23.5"
jsonschema = "^4.6.0"
google-cloud-bigquery = "^3.2.0"
db-dtypes = "^1.0.1"
google-cloud-secret-manager = "^2.13.0"
json5 = "^0.9.10"

[tool.ruff]
select = [
    "ANN206", # missing-return-type-class-method

    "B002", # unary-prefix-increment
    "B003", # assignment-to-os-environ
    "B004", # unreliable-callable-check
    "B005", # strip-with-multi-characters
    "B009", # get-attr-with-constant
    "B010", # set-attr-with-constant
    "B013", # redundant-tuple-in-exception-handler
    "B014", # duplicate-handler-exception
    "B016", # cannot-raise-literal
    "B019", # cached-instance-method
    "B020", # loop-variable-overrides-iterator
    "B021", # f-string-docstring
    "B022", # useless-contextlib-suppress
    "B023", # function-uses-loop-variable
    "B025", # duplicate-try-block-exception
    "B026", # star-arg-unpacking-after-keyword-arg
    "B027", # empty-method-without-abstract-decorator
    "B028", # no-explicit-stacklevel
    "B029", # except-with-empty-tuple
    "B030", # except-with-non-exception-classes
    "B031", # reuse-of-groupby-generator
    "B032", # unintentional-type-annotation

    "C400", # unnecessary-generator-list
    "C401", # unnecessary-generator-set
    "C404", # unnecessary-list-comprehension-dict
    "C406", # unnecessary-literal-dict
    "C409", # unnecessary-literal-within-tuple-call
    "C410", # unnecessary-literal-within-list-call
    "C411", # unnecessary-list-call
    "C413", # unnecessary-call-around-sorted
    "C415", # unnecessary-subscript-reversal
    "C418", # unnecessary-literal-within-dict-call

    "D419", # empty-docstring

    "E", # pycodestyle:error

    "F", # pyflakes

    "G004", # logging-f-string
    "G010", # logging-warn
    "G101", # logging-extra-attr-clash
    "G201", # logging-exc-info
    "G202", # logging-redundant-exc-info

    "ISC001", # single-line-implicit-string-concatenation

    "N804", # invalid-first-argument-name-for-class-method
    "N805", # invalid-first-argument-name-for-method
    "N807", # dunder-function-name
    "N811", # constant-imported-as-non-constant
    "N812", # lowercase-imported-as-non-lowercase
    "N814", # camelcase-imported-as-constant
    "N817", # camelcase-imported-as-acronym
    "N999", # invalid-module-name

    "NPY001", # numpy-deprecated-type-alias
    "NPY002", # numpy-legacy-random

    "PD002", # pandas-use-of-inplace-argument
    "PD003", # pandas-use-of-dot-is-null
    "PD004", # pandas-use-of-dot-not-null
    "PD007", # pandas-use-of-dot-ix
    "PD008", # pandas-use-of-dot-at
    "PD009", # pandas-use-of-dot-iat
    "PD010", # pandas-use-of-dot-pivot-or-unstack
    "PD011", # pandas-use-of-dot-values
    "PD012", # pandas-use-of-dot-read-table
    "PD013", # pandas-use-of-dot-stack
    "PD015", # pandas-use-of-pd-merge
    "PD901", # pandas-df-variable-name

    "PGH001", # eval
    "PGH002", # deprecated-log-warn

    "PIE790", # unnecessary-pass
    "PIE794", # duplicate-class-field-definition
    "PIE796", # non-unique-enums
    "PIE800", # unnecessary-spread
    "PIE804", # unnecessary-dict-kwargs
    "PIE807", # reimplemented-list-builtin
    "PIE810", # multiple-starts-ends-with

    "PLC0414", # useless-import-alias
    "PLC3002", # unnecessary-direct-lambda-call

    "PLE0100", # yield-in-init
    "PLE0101", # return-in-init
    "PLE0116", # continue-in-finally
    "PLE0117", # nonlocal-without-binding
    "PLE0118", # load-before-global-declaration
    "PLE0302", # unexpected-special-method-signature
    "PLE0604", # invalid-all-object
    "PLE0605", # invalid-all-format
    "PLE1142", # await-outside-async
    "PLE1205", # logging-too-many-args
    "PLE1206", # logging-too-few-args
    "PLE1307", # bad-string-format-type
    "PLE1310", # bad-str-strip-call
    "PLE1507", # invalid-envvar-value
    "PLE2502", # bidirectional-unicode
    "PLE2510", # invalid-character-backspace
    "PLE2512", # invalid-character-sub
    "PLE2513", # invalid-character-esc
    "PLE2514", # invalid-character-nul
    "PLE2515", # invalid-character-zero-width-space

    "PLR0133", # comparison-of-constant
    "PLR0206", # property-with-parameters
    "PLR0402", # manual-from-import
    "PLR1701", # repeated-isinstance-calls
    "PLR1711", # useless-return
    "PLR1722", # sys-exit-alias

    "PLW0120", # useless-else-on-loop
    "PLW0129", # assert-on-string-literal
    "PLW0711", # binary-op-exception
    "PLW1508", # invalid-envvar-default

    "PT008", # pytest-patch-with-lambda
    "PT009", # pytest-unittest-assertion
    "PT010", # pytest-raises-without-exception
    "PT013", # pytest-incorrect-pytest-import
    "PT015", # pytest-assert-always-false
    "PT017", # pytest-assert-in-except
    "PT018", # pytest-composite-assertion
    "PT022", # pytest-useless-yield-fixture
    "PT024", # pytest-unnecessary-asyncio-mark-on-fixture
    "PT025", # pytest-erroneous-use-fixtures-on-fixture
    "PT026", # pytest-use-fixtures-without-parameters

    "PTH100", # os-path-abspath
    "PTH101", # os-chmod
    "PTH102", # os-mkdir
    "PTH103", # os-makedirs
    "PTH104", # os-rename
    "PTH105", # pathlib-replace
    "PTH106", # os-rmdir
    "PTH108", # os-unlink
    "PTH109", # os-getcwd
    "PTH110", # os-path-exists
    "PTH111", # os-path-expanduser
    "PTH112", # os-path-isdir
    "PTH114", # os-path-islink
    "PTH115", # os-readlink
    "PTH116", # os-stat
    "PTH117", # os-path-isabs
    "PTH119", # os-path-basename
    "PTH121", # os-path-samefile
    "PTH122", # os-path-splitext
    "PTH124", # py-path

    "RET501", # unnecessary-return-none

    "RSE102", # unnecessary-paren-on-raise-exception

    "RUF006", # asyncio-dangling-task
    "RUF007", # pairwise-over-zipped
    "RUF008", # mutable-dataclass-default
    "RUF009", # function-call-in-dataclass-default-argument

    "S102", # exec-builtin
    "S103", # bad-file-permissions
    "S110", # try-except-pass
    "S112", # try-except-continue
    "S302", # suspicious-marshal-usage
    "S306", # suspicious-mktemp-usage
    "S307", # suspicious-eval-usage
    "S312", # suspicious-telnet-usage
    "S313", # suspicious-xmlc-element-tree-usage
    "S314", # suspicious-xml-element-tree-usage
    "S315", # suspicious-xml-expat-reader-usage
    "S316", # suspicious-xml-expat-builder-usage
    "S317", # suspicious-xml-sax-usage
    "S318", # suspicious-xml-mini-dom-usage
    "S319", # suspicious-xml-pull-dom-usage
    "S320", # suspicious-xmle-tree-usage
    "S321", # suspicious-ftp-lib-usage
    "S323", # suspicious-unverified-context-usage
    "S506", # unsafe-yaml-load
    "S508", # snmp-insecure-version
    "S509", # snmp-weak-cryptography
    "S602", # subprocess-popen-with-shell-equals-true
    "S603", # subprocess-without-shell-equals-true
    "S604", # call-with-shell-equals-true
    "S605", # start-process-with-a-shell
    "S606", # start-process-with-no-shell
    "S607", # start-process-with-partial-path
    "S608", # hardcoded-sql-expression
    "S612", # logging-config-insecure-listen
    "S701", # jinja2-autoescape-false

    "SIM101", # duplicate-isinstance-call
    "SIM103", # needless-bool
    "SIM107", # return-in-try-except-finally
    "SIM109", # compare-with-tuple
    "SIM202", # negate-not-equal-op
    "SIM208", # double-negation
    "SIM220", # expr-and-not-expr
    "SIM221", # expr-or-not-expr
    "SIM222", # expr-or-true
    "SIM223", # expr-and-false
    "SIM401", # if-else-block-instead-of-dict-get
    "SIM910", # dict-get-with-none-default

    "T201", # print
    "T203", # p-print

    "TID252", # relative-imports

    "UP001", # useless-metaclass-type
    "UP003", # type-of-primitive
    "UP005", # deprecated-unittest-alias
    "UP009", # utf8-encoding-declaration
    "UP010", # unnecessary-future-import
    "UP011", # lru-cache-without-parameters
    "UP012", # unnecessary-encode-utf8
    "UP013", # convert-typed-dict-functional-to-class
    "UP014", # convert-named-tuple-functional-to-class
    "UP017", # datetime-timezone-utc
    "UP019", # typing-text-str-alias
    "UP021", # replace-universal-newlines
    "UP022", # replace-stdout-stderr
    "UP023", # deprecated-c-element-tree
    "UP024", # os-error-alias
    "UP026", # deprecated-mock-import
    "UP027", # unpacked-list-comprehension
    "UP028", # yield-in-for-loop
    "UP029", # unnecessary-builtin-import
    "UP033", # lru-cache-with-maxsize-none
    "UP036", # outdated-version-block
    "UP037", # quoted-annotation

    "YTT101", # sys-version-slice3
    "YTT102", # sys-version2
    "YTT103", # sys-version-cmp-str3
    "YTT201", # sys-version-info0-eq3
    "YTT202", # six-py3
    "YTT203", # sys-version-info1-cmp-int
    "YTT204", # sys-version-info-minor-cmp-int
    "YTT301", # sys-version0
    "YTT302", # sys-version-cmp-str10
    "YTT303", # sys-version-slice
]
ignore = [
    "E501", # line too long
    "E402", # module-import-not-at-top-of-file	

    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage

    "W605", # invalid-escape-sequence
]
extend-exclude = ["CommonServerPython", "test_data"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
# fixable = []
# unfixable = []

line-length = 120
target-version = "py310"
src = [
    "Packs/Base/Scripts/CommonServerPython",
    "Tests/demistomock",
    "Packs/ApiModules/Scripts/*",
]

[tool.ruff.per-file-ignores]
"**/*_test.py" = []

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
follow_imports = "silent"
pretty = true
allow_redefinition = true
junit_xml = ".report_mypy.xml"
exclude = [
    "test_data",
    "tests_data",
    ".venv",
    ".*_test.py$",
    "test_.*.py",
    "infrastructure_tests",
    "CommonServerPython.py",
    "demistomock.py",
]

[tool.pytest]
junit_family = "xunit1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
