[tool.poetry]
name = "cortex-module-test"
version = "0.0.3"
description = "A test cortex module package."
authors = ["Cortex"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "cortex_module_test" }
]

[tool.poetry.dependencies]
python = "^3.10,<3.13"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[tool.poetry.include]
# Optional: explicitly include files
files = ["README.md", "LICENSE", "pyproject.toml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"